@@ -20,7 +20,10 @@
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.video.streamlink-tester</source>
         <size>106257</size>
-        <news>[B]1.5.0[/B] - 20-06-2019
+        <news>[B]1.5.1[/B] - 23-08-2019
+- Add exception to headers object loop finder in case it fails
+
+[B]1.5.0[/B] - 20-06-2019
 - Updated generic plugin (thank you back-to)
 - Added youtube-dl as optional dependency to augment the generic plugin
 - Added ability to set custom title from plugin url
