@@ -1,3 +1,6 @@
+[B]1.5.1[/B] - 23-08-2019
+- Add exception to headers object loop finder in case it fails
+
 [B]1.5.0[/B] - 20-06-2019
 - Updated generic plugin (thank you back-to)
 - Added youtube-dl as optional dependency to augment the generic plugin
